# cubesat

CubeSat/cubepython/: calibracion  err_rel2  fEdep  fEdep vs RE.py  real_trajectory  real_trajectory.py  simulationvsreal  trajectory.py  trajectory1.py  trajectory2.py  xyz  xyz_1  xyz_2
CubeSat/cuberoot/Hits/: fX.C  fY.C  fZ.C
CubeSat/cuberoot/Particle/: fX.C  fY.C  fYfX.C  fZ.C  fZfY.C  xyz.C
CubeSat/cuberoot/Scoring/: Time.C  Wavelength.C  fCount.C  fEdep.C  fEvent.C
CubeSat/cubesat/: gps.mac  vis.mac
CubeSat/cubesat/include/: event.hh
CubeSat/cubesat/src/: construction.cc  detector.cc  event.cc  physics.cc  run.cc
CubeSat/scintillator/: CMakeLists.txt  gps.mac  vis.mac
CubeSat/scintillator/include/: construction.hh  detector.hh  event.hh  stepping.hh
CubeSat/scintillator/src/: action.cc  construction.cc  detector.cc  event.cc  physics.cc  run.cc  stepping.cc
cubesat/: .README  CMakeLists.txt  cubesat.cc  gps.mac
cubesat/cubesat/: CMakeLists.txt  cubesat.cc  vis.mac
cubesat/cubesat/include/: construction.hh  event.hh  physics.hh  run.hh
cubesat/cubesat/src/: detector.cc  stepping.cc
cubesat/include/: action.hh  construction.hh  detector.hh  event.hh  generator.hh
cubesat/src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc  stepping.cc
